// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Max shell > renders the English shell and an actionable empty page 1`] = `
<div
  class="app-frame"
>
  <header
    class="topbar"
  >
    <div
      class="topbar__title"
    >
      <p>
        Test Shop
      </p>
      <span
        aria-hidden="true"
      >
        /
      </span>
      <strong>
        Items
      </strong>
    </div>
    <div
      class="topbar__actions"
    >
      <button
        class="command-trigger"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search"
          fill="none"
          height="17"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <span>
          Search commands
        </span>
        <kbd>
          Ctrl
           K
        </kbd>
      </button>
      <button
        class="button button--ghost quick-entry-trigger"
        type="button"
      >
        <span
          class="button__icon"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-zap"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.914 4a1.5 1.5 0 00-2.474-1.561l-9 9A1.5 1.5 0 005.5 14h4.002a.5.5 0 01.471.666L8.086 20a1.5 1.5 0 002.475 1.56l9-9A1.5 1.5 0 0018.5 10h-3.997a.5.5 0 01-.472-.667z"
            />
          </svg>
        </span>
        <span
          class="button__label"
        >
          Quick sale
        </span>
      </button>
      <div
        class="create-menu"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="button button--primary"
          type="button"
        >
          <span
            class="button__icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
          </span>
          <span
            class="button__label"
          >
            New
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down button__chevron"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </header>
  <main
    aria-labelledby="page-title"
    class="content"
    data-page="items"
    id="main-content"
    tabindex="-1"
  >
    <header
      class="page-header"
    >
      <div
        aria-hidden="true"
        class="page-header__icon"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-package"
          fill="none"
          height="28"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.7"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
          />
          <path
            d="M12 22V12"
          />
          <polyline
            points="3.29 7 12 12 20.71 7"
          />
          <path
            d="m7.5 4.27 9 5.15"
          />
        </svg>
      </div>
      <div
        class="page-header__copy"
      >
        <h1
          id="page-title"
        >
          Items
        </h1>
        <p>
          Universal items shaped by configurable properties.
        </p>
      </div>
    </header>
    <section
      class="object-workspace"
    >
      <div
        class="object-toolbar"
      >
        <div>
          <strong>
            0
             
            records
          </strong>
          <span>
            0
             
            properties
             · 
            0
             
            templates
          </span>
        </div>
        <div
          class="object-toolbar__actions"
        >
          <button
            class="button button--ghost"
            type="button"
          >
            <span
              class="button__icon"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-sliders-horizontal"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 5H3"
                />
                <path
                  d="M12 19H3"
                />
                <path
                  d="M14 3v4"
                />
                <path
                  d="M16 17v4"
                />
                <path
                  d="M21 12h-9"
                />
                <path
                  d="M21 19h-5"
                />
                <path
                  d="M21 5h-7"
                />
                <path
                  d="M8 10v4"
                />
                <path
                  d="M8 12H3"
                />
              </svg>
            </span>
            <span
              class="button__label"
            >
              Properties
            </span>
          </button>
          <button
            class="button button--primary"
            type="button"
          >
            <span
              class="button__icon"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus"
                fill="none"
                height="17"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="17"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </span>
            <span
              class="button__label"
            >
              Create item
            </span>
          </button>
        </div>
      </div>
      <div
        class="object-layout"
      >
        <div
          aria-busy="false"
          class="record-panel"
        >
          <div
            class="view-bar"
          >
            <div
              class="view-bar__tabs"
            >
              <button
                class="view-tab"
                data-active="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-bookmark"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
                  />
                </svg>
                <span>
                  Default View
                </span>
              </button>
              <button
                class="view-tab view-tab--save"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
                <span>
                  Save View
                </span>
              </button>
            </div>
          </div>
          <div
            class="object-empty"
          >
            <div
              class="empty-state__icon"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus"
                fill="none"
                height="25"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="25"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </div>
            <h2>
              No items yet
            </h2>
            <p>
              Create the first record or configure properties for the way this shop works.
            </p>
            <button
              class="button button--primary"
              type="button"
            >
              <span
                class="button__label"
              >
                Create item
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="overlay"
      >
        <div
          aria-labelledby="record-dialog-title"
          aria-modal="true"
          class="overlay__panel object-dialog"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="dialog-header"
          >
            <div>
              <p
                class="eyebrow"
              >
                MAX · 
                Schema
              </p>
              <h2
                id="record-dialog-title"
              >
                Create item
              </h2>
            </div>
            <button
              aria-label="Close"
              class="icon-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-x"
                fill="none"
                height="19"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="19"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </header>
          <form
            class="object-form"
          >
            <label
              class="field"
            >
              <span>
                Display name
              </span>
              <input
                data-autofocus="true"
                maxlength="120"
                placeholder="A clear name for this item"
                required=""
                value=""
              />
            </label>
            <footer
              class="form-footer"
            >
              <button
                class="button button--secondary"
                type="button"
              >
                <span
                  class="button__label"
                >
                  Cancel
                </span>
              </button>
              <button
                class="button button--primary"
                type="submit"
              >
                <span
                  class="button__label"
                >
                  Save
                </span>
              </button>
            </footer>
          </form>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`Max shell > switches the complete shell to Arabic and RTL 1`] = `
<div
  class="app-frame"
>
  <header
    class="topbar"
  >
    <div
      class="topbar__title"
    >
      <p>
        Test Shop
      </p>
      <span
        aria-hidden="true"
      >
        /
      </span>
      <strong>
        الرئيسية
      </strong>
    </div>
    <div
      class="topbar__actions"
    >
      <button
        class="command-trigger"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search"
          fill="none"
          height="17"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <span>
          البحث في الأوامر
        </span>
        <kbd>
          Ctrl
           K
        </kbd>
      </button>
      <button
        class="button button--ghost quick-entry-trigger"
        type="button"
      >
        <span
          class="button__icon"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-zap"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.914 4a1.5 1.5 0 00-2.474-1.561l-9 9A1.5 1.5 0 005.5 14h4.002a.5.5 0 01.471.666L8.086 20a1.5 1.5 0 002.475 1.56l9-9A1.5 1.5 0 0018.5 10h-3.997a.5.5 0 01-.472-.667z"
            />
          </svg>
        </span>
        <span
          class="button__label"
        >
          بيع سريع
        </span>
      </button>
      <div
        class="create-menu"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="button button--primary"
          type="button"
        >
          <span
            class="button__icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
          </span>
          <span
            class="button__label"
          >
            جديد
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down button__chevron"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </header>
  <main
    aria-labelledby="page-title"
    class="content"
    data-page="home"
    id="main-content"
    tabindex="-1"
  >
    <header
      class="page-header"
    >
      <div
        aria-hidden="true"
        class="page-header__icon"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-house"
          fill="none"
          height="28"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.7"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
          />
          <path
            d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
        </svg>
      </div>
      <div
        class="page-header__copy"
      >
        <h1
          id="page-title"
        >
          الرئيسية
        </h1>
        <p>
          ابدأ بسرعة من أهم أجزاء مساحة عملك.
        </p>
      </div>
    </header>
    <div
      class="home-page"
    >
      <section
        class="home-hero"
      >
        <div
          aria-hidden="true"
          class="home-page__icon"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sparkles"
            fill="none"
            height="31"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.55"
            viewBox="0 0 24 24"
            width="31"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
            />
            <path
              d="M20 2v4"
            />
            <path
              d="M22 4h-4"
            />
            <circle
              cx="4"
              cy="20"
              r="2"
            />
          </svg>
        </div>
        <h2>
          كل شغل متجرك في مكان واحد
        </h2>
        <p>
          رتّب ماكس على طريقة شغلك، وواصل العمل حتى من دون إنترنت.
        </p>
        <div
          class="home-hero__actions"
        >
          <button
            class="button button--primary"
            type="button"
          >
            <span
              class="button__icon"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-package"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
                />
                <path
                  d="M12 22V12"
                />
                <polyline
                  points="3.29 7 12 12 20.71 7"
                />
                <path
                  d="m7.5 4.27 9 5.15"
                />
              </svg>
            </span>
            <span
              class="button__label"
            >
              افتح العناصر
            </span>
          </button>
          <button
            class="button button--secondary"
            type="button"
          >
            <span
              class="button__icon"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-search"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21 21-4.34-4.34"
                />
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
              </svg>
            </span>
            <span
              class="button__label"
            >
              افتح قائمة الأوامر
            </span>
          </button>
        </div>
      </section>
      <section
        aria-label="مساحة العمل"
        class="workspace-start"
      >
        <p
          class="workspace-start__label"
        >
          مساحة العمل
        </p>
        <button
          class="workspace-link"
          type="button"
        >
          <span
            class="workspace-link__icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-package"
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="17"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <polyline
                points="3.29 7 12 12 20.71 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
          </span>
          <span>
            <strong>
              العناصر
            </strong>
            <small>
              أضف أول عنصر، وسجّل فقط البيانات المهمة لمتجرك.
            </small>
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right workspace-link__arrow"
            fill="none"
            height="15"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
        </button>
        <button
          class="workspace-link"
          type="button"
        >
          <span
            class="workspace-link__icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-receipt-text"
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="17"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 16H8"
              />
              <path
                d="M14 8H8"
              />
              <path
                d="M16 12H8"
              />
              <path
                d="M4 3a1 1 0 0 1 1-1 1.3 1.3 0 0 1 .7.2l.933.6a1.3 1.3 0 0 0 1.4 0l.934-.6a1.3 1.3 0 0 1 1.4 0l.933.6a1.3 1.3 0 0 0 1.4 0l.933-.6a1.3 1.3 0 0 1 1.4 0l.934.6a1.3 1.3 0 0 0 1.4 0l.933-.6A1.3 1.3 0 0 1 19 2a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1 1.3 1.3 0 0 1-.7-.2l-.933-.6a1.3 1.3 0 0 0-1.4 0l-.934.6a1.3 1.3 0 0 1-1.4 0l-.933-.6a1.3 1.3 0 0 0-1.4 0l-.933.6a1.3 1.3 0 0 1-1.4 0l-.934-.6a1.3 1.3 0 0 0-1.4 0l-.933.6a1.3 1.3 0 0 1-.7.2 1 1 0 0 1-1-1z"
              />
            </svg>
          </span>
          <span>
            <strong>
              المعاملات
            </strong>
            <small>
              سجّل أول عملية بيع أو شراء أو تحويل لتظهر هنا.
            </small>
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right workspace-link__arrow"
            fill="none"
            height="15"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
        </button>
        <button
          class="workspace-link"
          type="button"
        >
          <span
            class="workspace-link__icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-search"
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="17"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-4.34-4.34"
              />
              <circle
                cx="11"
                cy="11"
                r="8"
              />
            </svg>
          </span>
          <span>
            <strong>
              افتح قائمة الأوامر
            </strong>
            <small>
              اضغط Ctrl K
            </small>
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right workspace-link__arrow"
            fill="none"
            height="15"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
        </button>
      </section>
      <section
        class="keyboard-note"
      >
        <kbd>
          Tab
        </kbd>
        <kbd>
          Enter
        </kbd>
        <kbd>
          Esc
        </kbd>
        <kbd>
          ↑ ↓
        </kbd>
        <div>
          <strong>
            لوحة المفاتيح
          </strong>
          <p>
            استخدم Tab للتنقّل، وEnter للتأكيد، وEscape للرجوع.
          </p>
        </div>
      </section>
    </div>
  </main>
</div>
`;
